cmake_minimum_required(VERSION 3.10.0)
project(literent VERSION 0.1.0 LANGUAGES C CXX)

find_package(LibtorrentRasterbar REQUIRED)
find_package(glfw3 REQUIRED)
find_package(OpenGL REQUIRED)

add_executable(literent src/main.cpp src/imgui/imgui.cpp src/imgui/imgui_draw.cpp src/imgui/imgui_widgets.cpp src/imgui/imgui_tables.cpp src/imgui/backends/imgui_impl_glfw.cpp src/imgui/backends/imgui_impl_opengl3.cpp src/imgui/imgui_demo.cpp src/imguifd/ImGuiFileDialog.cpp src/toml++/toml.hpp)
target_link_libraries(literent PRIVATE LibtorrentRasterbar::torrent-rasterbar glfw OpenGL::GL)
target_include_directories(literent PRIVATE src/imgui src/imgui/backends src/imguifd src/toml++)
include(CTest)
enable_testing()
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/THIRD-PARTY-LICENSES" DESTINATION "share/literent")
set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
include(InstallRequiredSystemLibraries)
set(CPACK_PACKAGE_NAME "literent")
set(CPACK_PACKAGE_VENDOR "angrypig555")
set(CPACK_PACKAGE_CONTACT "angrypig555 <brny@brny.dev>")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A lightweight torrent client")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "1")

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CPACK_GENERATOR "TGZ")
include(CPack)
